# fast_spa

./: .gitignore  3-12.ipynb  LICENSE  LRB.ipynb  Makefile  README.md  _spa-old.pyx  _spa.pyx  nb.ipynb  pyproject.toml  setup.py  spa.py  t.py
fast_spa/: __init__.py  _core.c  _core.pxd  _core.pyi  _core.pyx  _lib.c  _lib.pxd  _lib.pyx  _terms.c  _terms.pxd  _terms.pyx  display.py  etopo.py
fastspa/: __init__.py  _core.c  _core.pxd  _core.pyi  _core.pyx  _lib.c  _lib.pxd  _lib.pyx  _terms.pxd  _terms.pyx  _utils.py  landscaping.c  landscaping.pyx  lib.c  lib.pxd  lib.pyx  main.py  shrubbing.c  shrubbing.pxd  shrubbing.pyx  t.pyx  tab.c  tab.pxd  tab.pyx
notebooks/: LRB.ipynb  cython.ipynb  example.ipynb  inverse.ipynb  nb.ipynb
pending/: _tables.pyx  core.pyx  spa.pyx  tables.pyx
tests/: _core_test.py  _tabs.pyx  benchmark.ipynb  benchmark.py  slowspa.py
trash/: _tabs.pyx
trash/_lib/: core.c  core.pyx
