[build-system]
requires = ["setuptools>=58.2.0", "wheel", "Cython>=0.29.23", "numpy>=1.23.4"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-spa"
version = "0.0.1"
description = "..."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.22"]
license = { file = "LICENSE" }

[project.optional-dependencies]
test = ["Cython >= 0.29.23", "pytest >= 7.2.0", "coverage >= 6.5.0"]
lint = ["black", "flake8"]

[tool.setuptools.packages.find]
include = ["fast_spa"]

[tool.setuptools.package-data]
fast_spa = ["*.pxd"]

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.pytest]
testpaths = ["tests"]

[tool.coverage.run]
plugins = ["Cython.Coverage"]
source = ["fast_spa"]
